@@ -21,21 +21,80 @@ window.addEventListener("load", onLoadOverlay, false);
 let folderURL = "";
 let originalName = "";
 let originalColor = "";
+let originalAlarms;
+let sogoBoxes = ["notify-on-personal-modifications",
+								 "notify-on-external-modifications", 
+								 "notify-user-on-personal-modifications"];
+let originalSOGoValues = {};
 
 function onLoadOverlay() {
 	if (window.arguments && window.arguments[0]) {
-		let calendarName = document.getElementById("calendar-name");
-		originalName = calendarName.value;
-		folderURL = document.getElementById("calendar-uri").value;
-		originalColor = document.getElementById("calendar-color").color;
+		let calendar =  window.arguments[0].calendar;
+		if (calendar) {
+			let calendarName = document.getElementById("calendar-name");
+			originalName = calendarName.value;
+			folderURL = document.getElementById("calendar-uri").value;
+			originalColor = document.getElementById("calendar-color").color;
+			originalAlarms = document.getElementById("fire-alarms").checked;
 
-		if (folderURL.indexOf(sogoBaseURL()) > -1) {
-			let rows = ["calendar-readOnly-row", "calendar-cache-row"];
-			for each (let row in rows) {
-					document.getElementById(row).setAttribute("collapsed", "true");
+			let hiddenRows;
+			if (folderURL.indexOf(sogoBaseURL()) > -1) {
+				let aclEntry = calendar.aclEntry;
+				if (aclEntry.userIsOwner) {
+					let box = document.getElementById("sogo-calendar-properties");
+					box.collapsed = false;
+					sizeToContent();
+
+					/* notifications */
+					for each (let davPropName in sogoBoxes) {
+							let boxId = "sogo-" + davPropName;
+							let box = document.getElementById(boxId);
+							let propName = "calendar.sogo." + davPropName;
+							let propValue = calendar.getProperty(propName);
+							if (!propValue) {
+								propValue = "false";
+							}
+							box.checked = (propValue == "true");
+							originalSOGoValues[propName] = propValue;
+					}
+					let propName = "calendar.sogo.notified-user-on-personal-modifications";
+					let propValue = calendar.getProperty(propName);
+					if (!propValue) {
+						propValue = "";
+					}
+					originalSOGoValues[propName] = propValue;
+					let field = document.getElementById("sogo-notified-user-on-personal-modifications");
+					field.value = propValue;
+				}
+
+				/* standard rows */
+				hiddenRows = ["calendar-readOnly-row", "calendar-cache-row"];
 			}
+			else {
+				hiddenRows = ["sogo-calendar-properties"];
+			}
+			for each (let row in hiddenRows) {
+					document.getElementById(row).setAttribute("collapsed", "true");
+   		}
+
+			/* "disable" callback */
+			let box = document.getElementById("sogo-notify-user-on-personal-modifications");
+			box.addEventListener("click",
+													 onSOGoNotifyUserOnPersonalModificationsChanged,
+													 false);
+			updateSOGoNotifyUserOnPersonalModificationsBox(box);
+			
 		}
 	}
+}
+
+function updateSOGoNotifyUserOnPersonalModificationsBox(box) {
+	let field = document.getElementById("sogo-notified-user-on-personal-modifications");
+	field.disabled = !box.checked;
+}
+
+function onSOGoNotifyUserOnPersonalModificationsChanged(event) {
+	updateSOGoNotifyUserOnPersonalModificationsBox(this);
 }
 
 function onOverlayAccept() {
@@ -44,12 +103,40 @@ function onOverlayAccept() {
 	let newFolderURL = document.getElementById("calendar-uri").value;
 	let newName = document.getElementById("calendar-name").value;
 	let newColor = document.getElementById("calendar-color").color;
+	let newAlarms = document.getElementById("fire-alarms").checked;
 
 	if (newFolderURL.indexOf(sogoBaseURL()) > -1
 			&& newFolderURL == folderURL) {
+		let calendar = window.arguments[0].calendar;
+		let valueChanged = false;
+		
+		let aclEntry = calendar.aclEntry;
+		if (aclEntry.userIsOwner) {
+			/* notifications */
+			for each (let davPropName in sogoBoxes) {
+				let boxId = "sogo-" + davPropName;
+				let box = document.getElementById(boxId);
+				let propName = "calendar.sogo." + davPropName;
+				let propValue = box.checked ? "true" : "false";
+				if (originalSOGoValues[propName] != propValue) {
+					valueChanged = true;
+					break;
+				}
+			}
+			if (!valueChanged) {
+				let propName = "calendar.sogo.notified-user-on-personal-modifications";
+				let field = document.getElementById("sogo-notified-user-on-personal-modifications");
+				let propValue = field.value;
+				valueChanged = (originalSOGoValues[propName] != propValue);
+			}
+		}
+
 		let changeName = (newName != originalName);
 		let changeColor = (newColor != originalColor);
-		if (changeName || changeColor) {
+		let changeAlarms = (newAlarms != originalAlarms);
+		valueChanged |= (changeName  || changeColor || changeAlarms);
+
+		if (valueChanged) {
 			let proppatch = new sogoWebDAV(newFolderURL, this);
 			let query = ("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
 									 + "<propertyupdate xmlns=\"DAV:\">"
@@ -59,6 +146,35 @@ function onOverlayAccept() {
 			if (changeColor)
 				query += ("<calendar-color xmlns=\"http://apple.com/ns/ical/\">"
 									+ newColor + "FF</calendar-color>");
+			if (changeAlarms) {
+				query += ("<calendar-show-alarms xmlns=\"urn:inverse:params:xml:ns:inverse-dav\">"
+									+ (newAlarms ? "true" : "false")
+									+ "</calendar-show-alarms>");
+			}
+
+			if (aclEntry.userIsOwner) {
+				for each (let davPropName in sogoBoxes) {
+					let boxId = "sogo-" + davPropName;
+					let box = document.getElementById(boxId);
+					let propName = "calendar.sogo." + davPropName;
+					let propValue = box.checked ? "true" : "false";
+					if (originalSOGoValues[propName] != propValue) {
+						query += ("<" + davPropName + " xmlns=\"urn:inverse:params:xml:ns:inverse-dav\">"
+											+ propValue + "</" + davPropName + ">");
+						calendar.setProperty(propName, propValue);
+					}
+				}
+				let davPropName = "notified-user-on-personal-modifications";
+				let propName = "calendar.sogo." + davPropName;
+				let field = document.getElementById("sogo-" + davPropName);
+				let propValue = field.value;
+				if (originalSOGoValues[propName] != propValue) {
+					calendar.setProperty(propName, propValue);
+					query += ("<" + davPropName + " xmlns=\"urn:inverse:params:xml:ns:inverse-dav\">"
+										+ propValue + "</" + davPropName + ">");
+				}
+			}
+
 			query += "</prop></set></propertyupdate>";
 			proppatch.proppatch(query);
 			rc = false;
