@@ -6,6 +6,11 @@
  URL:           http://inverse.ca
   -->
 
+<!DOCTYPE overlay [
+<!ENTITY % propertiesDTD SYSTEM "chrome://sogo-integrator/locale/calendar/properties-overlay.dtd">
+%propertiesDTD;
+]>
+
 <?xml-stylesheet type="text/css" href="chrome://global/skin/global.css"?>
 <?xml-stylesheet type="text/css" href="chrome://sogo-integrator/skin/properties-overlay.css"?>
 <?xml-stylesheet type="text/css" href="chrome://sogo-integrator/content/calendar/properties-overlay.css"?>
@@ -18,5 +23,18 @@
       src="chrome://sogo-integrator/locale/calendar/properties-overlay.properties"/>
     <script type="application/x-javascript"
       src="chrome://sogo-integrator/content/calendar/properties-overlay.js"/>
+
+    <vbox id="sogo-calendar-properties" collapsed="true">
+      <checkbox id="sogo-notify-on-personal-modifications"
+        label="&properties-overlay.notify-on-personal-modifications.label;"
+        checked="false"/>
+      <checkbox id="sogo-notify-on-external-modifications"
+        label="&properties-overlay.notify-on-external-modifications.label;"
+        checked="false"/>
+      <checkbox id="sogo-notify-user-on-personal-modifications"
+        label="&properties-overlay.notify-user-on-personal-modifications.label;"
+        checked="false"/>
+      <textbox flex="1" id="sogo-notified-user-on-personal-modifications"/>
+    </vbox>
   </dialog>
 </overlay>
