@@ -1,0 +1,4 @@
+force_bool_pref("calendar.caldav.sched.enabled", true);
+force_int_pref("calendar.autorefresh.timeout", 30);
+force_int_pref("calendar.invitations.autorefresh.timeout", 30);
+force_bool_pref("sogo-integrator.disable-send-invitations-checkbox", false);
