@@ -1,0 +1,2 @@
+#sogo-calendar-properties checkbox
+{ white-space: nowrap; }
