@@ -1,3 +1,11 @@
+2012-07-10  Jean Raby  <jraby@inverse.ca>
+
+	* chrome/content/calendar/calendar-overlay.js	(openCalendarUnsubscriptionDialog):
+	Re-add calendar deletion function so that the 'Delete Calendar' icon works again.
+
+	* chrome/content/calendar/folder-handler.js: handle
+	"{urn:inverse:params:xml:ns:inverse-dav}calendar-show-alarms".
+
 2012-02-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* chrome/content/addressbook/folder-handler.js
